# tide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  dist-workspace.toml  rustfmt.toml
assets/fonts/md_io_typeface/: readme.txt
assets/tests/: main.typ
assets/tests/sub_dir/: autocomp_test.typ
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/search.desc/tide/: tide-desc-0-.js
doc/src/tide/: data.rs.html  editor.rs.html  file_manager.rs.html  main.rs.html  screen.rs.html  widgets.rs.html  world.rs.html
doc/tide/: all.html  enum.Message.html  fn.main.html  index.html  sidebar-items.js  struct.Tide.html
doc/tide/data/: index.html  sidebar-items.js
doc/tide/editor/: index.html  sidebar-items.js
doc/tide/file_manager/: index.html  sidebar-items.js
doc/tide/screen/: enum.Screen.html  index.html  sidebar-items.js
doc/tide/widgets/: index.html  sidebar-items.js
doc/tide/world/: constant.LIBERTINUS_SERIF_BOLD.html  constant.LIBERTINUS_SERIF_BOLD_ITALIC.html  constant.LIBERTINUS_SERIF_INITIALS.html  constant.LIBERTINUS_SERIF_ITALIC.html  constant.LIBERTINUS_SERIF_MATH.html  constant.LIBERTINUS_SERIF_REGULAR.html  constant.LIBERTINUS_SERIF_SEMIBOLD.html  constant.NEW_CMM_MATH_REGULAR.html  fn.default_fonts.html  fn.library.html  fn.load_fonts.html  index.html  sidebar-items.js  struct.Files.html  (+1 more)
src/: data.rs  editor.rs  file_manager.rs  font.rs  icon.rs  main.rs  screen.rs  widgets.rs  world.rs
src/data/: config.rs  style.rs
src/editor/: autocomplete.rs  bindings.rs  buffer.rs  highlighter.rs
src/file_manager/: export.rs  file.rs  import.rs
src/screen/: component.rs  editing.rs  welcome.rs
src/widgets/: menu.rs  vsplit.rs
(+278 files in other folders)
