[package]
name = "tide"
version = "0.1.0-alpha"
edition = "2021"
repository = "https://github.com/lilBchii/tide"

[dependencies]
# GUI
iced = { version = "0.14", features = ["tokio", "image", "svg", "advanced", "tiny-skia"] }
rfd = { version = "0.15.3", features = ["xdg-portal"] }
iced_aw = { version = "0.13.0", features = ["menu", "selection_list"] }
open = "5.3.2"
# CONFIG
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
dirs-next = "2.0.0"
# TYPST
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-svg = "0.13.1"
typst-ide = "0.13.1"
chrono = "0.4.40"
iced_palace = "0.14.0"

[dev-dependencies]
# ASYNC TESTS
tokio = { version = "1.44.2", features = ["macros", "rt"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
